# smartops-openenv

./: README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
baseline/: run_agent.py
data/: tickets.json
env/: environment.py  grader.py  models.py  tasks.py
server/: app.py
