[project]
name = "smartops-agent"
version = "0.1.0"
description = "SmartOps Ticket Resolution Agent"
authors = [
    { name="Monish" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"